[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltronsecurity"
version = "0.0.3"
authors = [
  { name="Matt Domko", email="hashtagcyber@users.noreply.github.com" },
]
description = "Framework for Abstracting and Storing Security findings"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    'azure-identity ~= 1.13',
    'azure-servicebus ~= 7.10',
    'psycopg2-binary ~= 2.9'
]